tests/baselines/reference/unusedSetterInClass(target=es2015).errors.txt
unusedSetterInClass.ts(2,13): error TS2564: Property '_fullName' has no initializer and is not definitely assigned in the constructor.
unusedSetterInClass.ts(2,13): error TS6133: '_fullName' is declared but its value is never read.
unusedSetterInClass.ts(4,17): error TS6133: 'fullName' is declared but its value is never read.


==== unusedSetterInClass.ts (3 errors) ====
    class Employee {
        private _fullName: string;
                ~~~~~~~~~
!!! error TS2564: Property '_fullName' has no initializer and is not definitely assigned in the constructor.
                ~~~~~~~~~
!!! error TS6133: '_fullName' is declared but its value is never read.
    
        private set fullName(newName: string) {
                    ~~~~~~~~
!!! error TS6133: 'fullName' is declared but its value is never read.
            this._fullName = newName;
        }
    }